# fortran-binary

./: .coverage  .gitignore  .travis.yml  MANIFEST.in  README.md  circle.yml  fb.py  forbin  fortran_binary.py  makefile  requirements-dev.txt  setup.cfg  setup.py  test_fb.py  tox.ini
.github/workflows/: pypi-release.yml  python-publish.yml
tests/: test_fb.py
