[metadata]
name = fortran_binary
version = attr: fortran_binary.__version__
author = Olav Vahtras
author_email = olav.vahtras@gmail.com
license = GPLv3
license_file = LICENSE
description = Utility for reading Fortran binary files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vahtras/fortran-binary
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Chemistry

[options]
py_modules = fortran_binary,test_fb
python_requires >= 3.9
install_requires =
    numpy
